--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "doctrine/doctrine-bundle": "^2.5",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.11",
+        "lexik/jwt-authentication-bundle": "^2.14",
         "sensio/framework-extra-bundle": "^6.2",
         "symfony/console": "5.4.*||6.0.*",
         "symfony/dotenv": "5.4.*||6.0.*",
@@ -77,6 +78,10 @@
         }
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "^3.4"
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "phpunit/phpunit": "^9.5",
+        "symfony/browser-kit": "5.4.*||6.0.*",
+        "symfony/css-selector": "5.4.*||6.0.*",
+        "symfony/phpunit-bridge": "^6.0"
     }
 }
